--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,20 +1,31 @@
 body{
-    font-family: 'Schoolbell', cursive;
+    font-family: 'Anonymous Pro', cursive;
 }
 
 .header {
-    margin: 50px;
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.headerText {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    margin-bottom: 0;
 }
 
 .add{
-    font-size: 40px;
+    font-size: 1.3em;
     text-align: center;
+    margin-left: 280px;
 }
 
 .createSection{
     display: flex;
     justify-content: center;
-
 }
 
 .createBox{
@@ -22,7 +33,6 @@ body{
     width: 500px;
     height: 300px;
 }
-
 
 .listSection{
     display: flex;
@@ -36,3 +46,14 @@ body{
     height: 300px;
 }
 
+.taskText {
+    /*text-decoration: none;*/
+    color: black;
+}
+
+.detailSection{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /*border: solid 1px grey;*/
+}
