--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,7 +3,7 @@ body{
 }
 
 .header {
-    margin-top: 150px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,7 +20,7 @@ body{
 .add{
     font-size: 1.3em;
     text-align: center;
-    margin-left: 280px;
+    margin-left: 500px;
 }
 
 .createSection{
@@ -36,12 +36,14 @@ body{
 
 .listSection{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .listBox{
     /*border: solid 1px cadetblue;*/
-    padding: 50px;
+    padding: 20px;
     width: 500px;
     height: 300px;
 }
@@ -49,11 +51,93 @@ body{
 .taskText {
     /*text-decoration: none;*/
     color: black;
+
 }
 
 .detailSection{
     display: flex;
     flex-direction: column;
     align-items: center;
-    /*border: solid 1px grey;*/
+}
+
+.detailBox {
+    /*border: solid 1px yellow;*/
+    padding: 30px;
+    margin-bottom: 40px;
+    width: 200px;
+    background-color: #efff96;
+
+}
+
+.heatmap{
+    width: 800px;
+    font-family: Hei;
+}
+
+/*heatmap*/
+
+.react-calendar-heatmap text {
+    font-size: 7px;
+    fill: #aaa;
+}
+
+.react-calendar-heatmap .react-calendar-heatmap-small-text {
+    font-size: 5px;
+}
+
+.react-calendar-heatmap rect:hover {
+    stroke: #555;
+    stroke-width: 1px;
+}
+
+/*
+ * Default color scale
+ */
+
+.react-calendar-heatmap .color-empty {
+    fill: #eeeeee;
+}
+
+.react-calendar-heatmap .color-filled {
+    fill: #8cc665;
+}
+
+/*
+ * Github color scale
+ */
+
+.react-calendar-heatmap .color-github-0 {
+    fill: #eeeeee;
+}
+.react-calendar-heatmap .color-github-1 {
+    fill: #d6e685;
+}
+.react-calendar-heatmap .color-github-2 {
+    fill: #8cc665;
+}
+.react-calendar-heatmap .color-github-3 {
+    fill: #44a340;
+}
+.react-calendar-heatmap .color-github-4 {
+    fill: #1e6823;
+}
+
+/*
+ * Gitlab color scale
+ */
+
+.react-calendar-heatmap .color-gitlab-0 {
+    fill: #ededed;
+}
+.react-calendar-heatmap .color-gitlab-1 {
+    fill: #acd5f2;
+}
+.react-calendar-heatmap .color-gitlab-2 {
+    fill: #7fa8d1;
+}
+.react-calendar-heatmap .color-gitlab-3 {
+    fill: #49729b;
+}
+.react-calendar-heatmap .color-gitlab-4 {
+    fill: #254e77;
 }
